# career-pilot-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  MANIFEST.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 20260721_01_users.py  20260721_02_documents.py  20260721_03_document_parsing.py  20260721_04_claim_extraction.py
apps/api/src/careerpilot_api/: config.py  main.py
apps/api/src/careerpilot_api/auth/: __init__.py  api.py  repository.py  security.py
apps/api/src/careerpilot_api/claims/: __init__.py  api.py  prompt.py  provider.py  repository.py  service.py
apps/api/src/careerpilot_api/db/: __init__.py  base.py  models.py
apps/api/src/careerpilot_api/documents/: __init__.py  api.py  crypto.py  parser.py  repository.py  service.py
apps/api/src/careerpilot_api/storage/: __init__.py  s3.py
apps/api/tests/: test_auth_e2e.py  test_auth_security.py  test_claim_service.py  test_document_parser.py  test_document_service.py  test_documents_e2e.py  test_health.py  test_stack_e2e.py
apps/web/: Dockerfile  package.json  (+3 more)
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  DATA_MODEL.md  DEPLOYMENT.md  EVALUATION_PLAN.md  IMPLEMENTATION_PLAN.md  MCP_SPECIFICATION.md  PRODUCT_REQUIREMENTS.md  SEARCH_PROFILE_SCHEMA.md  SECURITY.md  UI_SPECIFICATION.md
tasks/: TASK_001_REPOSITORY_FOUNDATION.md  TASK_003_DOCUMENT_UPLOAD.md  TASK_004_DOCUMENT_PARSING.md  TASK_005_CLAIM_EXTRACTION.md
(+21 files in other folders)
